# 1069_Auswertung_Bewerberzahlen

./: .dockerignore  Dockerfile  README.md  pyproject.toml
Projektbeschreibung/: Projektskizze.md
docs/: sliplane-postgres.md
src/: app.py  dashboard_app.py
src/app_pages/: dashboard_page.py  data_management_page.py  import_page.py
src/bewerberzahlen/: __init__.py  app_config.py  io_utils.py  pipeline.py  storage.py
src/data/mapping/: studiengaenge.json
tests/unit/: test_io_utils.py  test_pipeline.py  test_storage.py
