[project]
name = "1069-auswertung-bewerberzahlen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "streamlit>=1.32.0",
  "pandas>=2.2.0",
  "openpyxl>=3.1.2",
  "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.3.7",
  "mypy>=1.9.0",
  "pytest>=8.1.1",
  "pandas-stubs>=2.2.0.240218",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
